# chest-xray-classifier

./: .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  README.ru.md  VinBigDataEDA.ipynb  pyproject.toml
.github/workflows/: notebook-review.yml
